--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "next": "10.0.4",
+    "next": "^10.2.3",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
